--- a/0是true？.html
+++ b/0是true？.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<div style="display: flex;align-items: center;justify-content: center">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+</div>
 <script>
     window.onload = function (ev) {
         if( 0 ){
