--- a/json拼接.html
+++ b/json拼接.html
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-<script>
-    var a = {
-        name:'qw',
-        age:'12'
-    }
-    var b = {
-        height:'120',
-        width:'210',
-    }
-    window.onload = function (ev) {
-        var c = JSON.stringify(a) + JSON.stringify(b);
-        console.log( JSON.parse(c) );
-    }
-</script>
+<div style="margin-left:20px;padding: 10px; text-align:center; display: flex;align-items: center;justify-content: center;width: 200px;height:200px;border: 1px solid #ddd;">
+    <div >
+        <div><img src="./blockSymbol.png" alt=""></div>
+        <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字</p>
+    </div>
+</div>
 </body>
 </html>
