--- a/json.html
+++ b/json.html
@@ -8,6 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-<iframe src="https://www.baidu.com/" frameborder="0"></iframe>
+<script>
+    window.onload = function (ev) {
+        if(isNaN('false')){
+            console.log('noNumber')
+        }
+        if(isNaN(2)){
+            console.log('number')
+        }
+    }
+</script>
 </body>
 </html>
